--- a/quizmetricStyle.css
+++ b/quizmetricStyle.css
@@ -28,7 +28,11 @@
     overflow: hidden;
     margin: 2px;
  }
-
+/* .announcment{
+   flex: box;
+   justify-content: center;
+   background-color: #f5e1da;
+} */
  /*score box*/
 .quiz-scoreBox{
     background-color: antiquewhite;
@@ -48,6 +52,7 @@
     width: 70%;
     overflow: hidden;
 }
+
  .quiz-header{
     padding: 1rem
  }
